--- a/themes/Nabucco/css/style.css
+++ b/themes/Nabucco/css/style.css
@@ -106,7 +106,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     margin-bottom: 0.85714em;
     padding-bottom:8px;
     border-bottom:1px dotted #ccc;  
-    color:#843418;    
+    color:#843418;   
+ 
   }
 
   h3 {
@@ -372,10 +373,13 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   }
   
   .welcome{
-      font-size:1.5em;
+      font-size:1.4em;
       font-family: "Lato",sans-serif;
       font-weight:100;      
-      border-left: 10px solid #843418;         
+      border-left: 10px solid #843418;  
+      text-align: justify;
+    text-justify: inter-word;
+      
   }
   
   .welcome p{
@@ -387,7 +391,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
       color:#843418;
       font-weight:bold;      
       text-transform:uppercase;  
-      border-bottom: 1px dotted #843418;      
+      border-bottom: 1px dotted #843418;   
+      font-size:1.1em;
   }
   
   .section-left, .section-right{
@@ -573,21 +578,29 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     background: #fff url('../images/Handcopypart.jpg') no-repeat right bottom;
     overflow:hidden;
   }
+  
+  #header-wrapper{
+      float:left;
+      width:50%;
+  }
 
   #site-title {   
-    font-size: 4em;
-    padding:15px 0 0 0;
-    line-height: 42px;
+    font-family: "Lato",serif;
+    font-size: 4.5em;
+    padding:10px 0 0 0;    
+    font-weight:bold;    
+    color:#333;
   }
   
   #site-title .smallcaps{
       font-variant: small-caps;
+       font-weight:100;
   }
   
   #map{
       float:left;
       padding:5px 0;
-      margin-right:10px;
+      margin-right:5px;
       border-right:1px dotted #843418;
       background-color: #fff;
   }
@@ -604,13 +617,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   #search-container {    
     text-align: right;
     vertical-align: top;
-    width: 27%;
-    padding:10px 0 10px;
-    
+    width: 295px;
+    padding:5px 0;   
+    overflow:hidden;    
   }
   #search-container form {
-    margin: 0.375em 0;    
-    width: 100%;
+    margin: 0 0;  
+    margin-left:5px;
+    width: 99%;
     position: relative;
   }
   #search-container form a {
@@ -622,7 +636,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
     margin: 0;
   }
   #search-container input[type=text] {
-    width: 60%;
+    width: 100%;
     height: 31.5px;
   }
   #search-container button {
