--- a/themes/Nabucco/css/wallop.css
+++ b/themes/Nabucco/css/wallop.css
@@ -16,32 +16,32 @@
   margin: 10px;
 }
 
-.slide-description {
-    font-size: 1.1em;
-    line-height: 1em;
-    position:absolute;
-    top:1em;
-    left:1em;    
-    color:#fff;
-   
-}
-
-.slide-title{
-    font-size: 1.2em;  
-    text-transform: uppercase;
-}
-
 .slide-text a{
     text-decoration:none;
-    color:#fff!important;
-     background:#843418;
+    color:#fff!important;    
+    background-color:rgba(132,52,24,0.7);
     padding:8px;    
     margin-bottom:20px;
 }
 
-.slide-text {
+.slide-title{
+    font-size: 1.1em;
+    line-height: 1em;    
+    position:absolute;
+    top:10px;
+    left:10px;    
+    font-size: 1.2em;  
+    text-transform: uppercase;
+    background:#843418;
     padding:10px 0;   
-    margin-bottom:15px;
+    font-family: "Lato",sans-serif;
+}
+
+.slide-content{
+    position:absolute;
+    left:10px;
+    bottom:10px;
+    padding:10px 0;   
 }
 
 .btn {  
