--- a/themes/Nabucco/css/wallop.css
+++ b/themes/Nabucco/css/wallop.css
@@ -1,8 +1,11 @@
 .photo-slider {
   margin-bottom: 0.5em;
   padding-bottom:1em;
-  display: inline-block;
-  
+  display: inline-block;  
+}
+
+.photo-slider ul{
+    margin:0;
 }
 
 .wallop-slider {
@@ -18,9 +21,7 @@
 
 .slide-text a{
     text-decoration:none;
-    color:#fff!important;    
-    background-color:rgba(132,52,24,0.7);
-    padding:8px;    
+    color:#fff!important;      
     margin-bottom:20px;
 }
 
@@ -33,7 +34,7 @@
     font-size: 1.2em;  
     text-transform: uppercase;
     background:#843418;
-    padding:10px 0;   
+    padding:10px;   
     font-family: "Lato",sans-serif;
 }
 
@@ -41,7 +42,20 @@
     position:absolute;
     left:10px;
     bottom:10px;
-    padding:10px 0;   
+    padding:10px;
+    max-width:75%;
+    background-color:rgba(132,52,24,0.7);
+}
+
+.rights{
+    font-weight:700;
+    color:#fff;
+    font-size:0.8em;
+    padding:2px 5px;
+    position:absolute;
+    right:10px;
+    top:10px;
+    background-color:rgba(132,52,24,0.3);
 }
 
 .btn {  
@@ -99,6 +113,8 @@
 
 .wallop-slider {
   width: 100%;
+   overflow: hidden;
+  margin:0;
 }
 
 .wallop-slider__list {
@@ -113,10 +129,12 @@
   top: 0;
   left: 0;
   width: 100%;
+  max-height:300px;  
+  overflow:hidden;
 }
 .wallop-slider__item img {
   display: block;
-  width: 100%;
+  width: 100%;  
 }
 
 .wallop-slider__item--current {
@@ -336,229 +354,6 @@
     -moz-transform: translate3d(100%, 0, 0);
     -ms-transform: translate3d(100%, 0, 0);
     transform: translate3d(100%, 0, 0);
-  }
-}
-
-/*==========  VERTICAL SLIDE CONFIG  ==========*/
-.wallop-slider--vertical-slide {
-  /* the 10ms animation-delay fixed some weird rendering issues with iPhone */
-}
-.wallop-slider--vertical-slide .wallop-slider__list {
-  position: relative;
-  overflow: hidden;
-  margin:0;
-}
-.wallop-slider--vertical-slide .wallop-slider__item--show-next {
-  -webkit-animation: slideFromTop 350ms 10ms linear both;
-  -moz-animation: slideFromTop 350ms 10ms linear both;
-  -ms-animation: slideFromTop 350ms 10ms linear both;
-  animation: slideFromTop 350ms 10ms linear both;
-}
-.wallop-slider--vertical-slide .wallop-slider__item--show-previous {
-  -webkit-animation: slideFromBottom 350ms 10ms linear both;
-  -moz-animation: slideFromBottom 350ms 10ms linear both;
-  -ms-animation: slideFromBottom 350ms 10ms linear both;
-  animation: slideFromBottom 350ms 10ms linear both;
-}
-.wallop-slider--vertical-slide .wallop-slider__item--hide-previous,
-.wallop-slider--vertical-slide .wallop-slider__item--hide-next {
-  display: block;
-}
-.wallop-slider--vertical-slide .wallop-slider__item--hide-previous {
-  -webkit-animation: slideToBottom 350ms 10ms linear both;
-  -moz-animation: slideToBottom 350ms 10ms linear both;
-  -ms-animation: slideToBottom 350ms 10ms linear both;
-  animation: slideToBottom 350ms 10ms linear both;
-}
-.wallop-slider--vertical-slide .wallop-slider__item--hide-next {
-  -webkit-animation: slideToTop 350ms 10ms linear both;
-  -moz-animation: slideToTop 350ms 10ms linear both;
-  -ms-animation: slideToTop 350ms 10ms linear both;
-  animation: slideToTop 350ms 10ms linear both;
-}
-
-/*==========  VERTICAL SLIDE ANIMATIONS  ==========*/
-@-webkit-keyframes slideFromTop {
-  0% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-}
-
-@-moz-keyframes slideFromTop {
-  0% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-}
-
-@-ms-keyframes slideFromTop {
-  0% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-}
-
-@keyframes slideFromTop {
-  0% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-  }
-}
-
-@-webkit-keyframes slideFromBottom {
-  0% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
-
-@-moz-keyframes slideFromBottom {
-  0% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
-
-@-ms-keyframes slideFromBottom {
-  0% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
-
-@keyframes slideFromBottom {
-  0% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-}
-
-@-webkit-keyframes slideToTop {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    opacity: 0;
-  }
-}
-
-@-moz-keyframes slideToTop {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    opacity: 0;
-  }
-}
-
-@-ms-keyframes slideToTop {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    opacity: 0;
-  }
-}
-
-@keyframes slideToTop {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, -100%, 0);
-    -moz-transform: translate3d(0, -100%, 0);
-    -ms-transform: translate3d(0, -100%, 0);
-    transform: translate3d(0, -100%, 0);
-    opacity: 0;
-  }
-}
-
-@-webkit-keyframes slideToBottom {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-    opacity: 0;
-  }
-}
-
-@-moz-keyframes slideToBottom {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-    opacity: 0;
-  }
-}
-
-@-ms-keyframes slideToBottom {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-    opacity: 0;
-  }
-}
-
-@keyframes slideToBottom {
-  99% {
-    opacity: 1;
-  }
-
-  100% {
-    -webkit-transform: translate3d(0, 100%, 0);
-    -moz-transform: translate3d(0, 100%, 0);
-    -ms-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-    opacity: 0;
   }
 }
 
