--- a/themes/Nabucco/css/style.css
+++ b/themes/Nabucco/css/style.css
@@ -1232,6 +1232,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
       color:#333;      
   }
   
+  .browse .item li{
+      list-style:none;
+  }
+  
   .alphabet_list{
       list-style:none;
       margin: 1.5em 0;
