--- a/themes/Nabucco/css/style.css
+++ b/themes/Nabucco/css/style.css
@@ -235,7 +235,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   input[type=password],
   textarea {
     font-family: "Lato", sans-serif;
-    border-color: #ccc;
+    border-color: #843418;
     border-width: 0.07143em;
     border-style: solid;
     padding: 0.30357em;
